# dotfiles

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .tmux.conf  .tmux.conf.local  .tmux_gpakosz.conf  .vimrc  README.md
.bash_profile.d/: 00-1-bash-settings.sh  00-1-locale.sh  00-2-prompt.sh  01-path.sh  02-history.sh  03-1-aliases.sh  03-2-aliases-custom.sh  03-3-aliases-sup.sh  03-4-aliases-git.sh  04-environment-variables.sh  10-1-macos_settings.sh  10-bash-completion.sh  10-homebrew.sh  11-ansible.sh  12-aws.sh  13-terraform.sh  14-docker-podman.sh  14-docker.sh  15-git.sh  16-pyvenv.sh  30-sup.sh  98-ssh-agent.sh  99-0-tmux.sh  99-1-post-path.sh  99-tmux.sh
.config/code/User/: settings.json
.config/raycast/scripts/: open_folder_downloads.sh  open_folder_git.sh  open_with_vscode.sh
.config/vscode/User/: settings.json
.github/: renovate.json
.tmux/scripts/: clip.sh  userhost.sh
.vim/: pl_header.temp  pm_header.temp  sh_header.temp
oracle/sql/: login.sql  show_grants.sql
src/bash/: ansible_tool_encypt_string.sh  check_urls.sh  check_urls_sup.lst  check_website_certificat.sh  diff_remote.sh  download_rhel_iso.sh  network_info_report.sh  ora_mem.sh  send_profile.sh  send_profile_hosts.lst  set_ora_env.sh  setup_dotfiles_config.sh  show_swap_processes.sh  smb_test.sh  supcis_proc_mem.sh
src/perl/: get_dsp_last_user_logon.pl  ldap_test.pl  rm.pl
src/python/: ansible_tool_create_encypted_psw.py  plot_graph_from_csv.py
src/python/tnsping/: .gitignore  pyproject.toml  tnsping.py
src/python/tnsping/tests/: test_tnsping_ldap.py
(+175 files in other folders)
